Remove solutions before beginning

--- a/notebooks/tutorial1/cv_tp1.ipynb
+++ b/notebooks/tutorial1/cv_tp1.ipynb
@@ -76,22 +76,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "vid = cv2.VideoCapture(0)\n",
-    "\n",
-    "ret, frame = vid.read()\n",
-    "\n",
-    "vid.release()\n",
-    "\n",
-    "# B G R opencv format\n",
-    "# R G B matplotlib format\n",
-    "rgb_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "\n",
-    "cv2.imwrite('myframe.png', frame)\n",
-    "\n",
-    "plt.imshow(rgb_frame)\n",
-    "plt.show"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -119,12 +104,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "hsv_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
-    "\n",
-    "plt.imshow(hsv_frame)\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -140,16 +120,7 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pil_image = Image.fromarray(rgb_frame)\n",
-    "\n",
-    "def contrast(v):\n",
-    "    contrast = ImageEnhance.Contrast(pil_image).enhance(v)\n",
-    "    \n",
-    "    contrast = np.array(contrast)\n",
-    "    plt.imshow(contrast)\n",
-    "    plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -181,9 +152,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "interact(contrast, v=(0., 2.))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,22 +179,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "from augmentation import RandAugmentation\n",
-    "\n",
-    "augment = RandAugmentation()\n",
-    "\n",
-    "img, aug = augment(pil_image)\n",
-    "\n",
-    "print(aug)\n",
-    "\n",
-    "img = np.array(img)\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.imshow(rgb_frame)\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.imshow(img)\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -241,33 +195,14 @@
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "vid = cv2.VideoCapture(0)\n",
-    "\n",
-    "FPS = vid.get(cv2.CAP_PROP_FPS)\n",
-    "\n",
-    "VIDEO_LENGTH = 10\n",
-    "\n",
-    "frame_w = int(vid.get(3))\n",
-    "frame_h = int(vid.get(4))\n",
-    "\n",
-    "rec = cv2.VideoWriter('myvideo.mov', cv2.VideoWriter_fourcc('m', 'p', '4', 'c'), FPS, (frame_w, frame_h))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(int(FPS*VIDEO_LENGTH)):\n",
-    "    \n",
-    "    ret, frame = vid.read()\n",
-    "    rec.write(frame)\n",
-    "    \n",
-    "vid.release()\n",
-    "rec.release()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -296,14 +231,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "squares = cv2.imread('squares.png')\n",
-    "\n",
-    "rgb_squares = cv2.cvtColor(squares, cv2.COLOR_BGR2RGB)\n",
-    "\n",
-    "plt.imshow(rgb_squares)\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -323,21 +251,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "black = np.array([0, 0, 0])\n",
-    "blue = np.array([255, 0, 0])\n",
-    "green = np.array([0, 255, 0])\n",
-    "red = np.array([0, 0, 255])\n",
-    "white = np.array([255, 255, 255])\n",
-    "\n",
-    "mask = cv2.inRange(squares, black, green)\n",
-    "\n",
-    "res = cv2.bitwise_and(squares, squares, mask=mask)\n",
-    "\n",
-    "rgb = cv2.cvtColor(res, cv2.COLOR_BGR2RGB)\n",
-    "plt.imshow(rgb)\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -353,44 +267,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "vid = cv2.VideoCapture('book.mov')\n",
-    "\n",
-    "FPS = vid.get(cv2.CAP_PROP_FPS)\n",
-    "\n",
-    "VIDEO_LENGTH = 10\n",
-    "\n",
-    "frame_w = int(vid.get(3))\n",
-    "frame_h = int(vid.get(4))\n",
-    "\n",
-    "rec = cv2.VideoWriter('myvideo2.mov', cv2.VideoWriter_fourcc('m', 'p', '4', 'c'), FPS, (frame_w, frame_h))\n",
-    "\n",
-    "while(vid.isOpened()):\n",
-    "    \n",
-    "    ret, frame = vid.read()\n",
-    "    \n",
-    "    if ret == False:\n",
-    "        break\n",
-    "        \n",
-    "    lower_yellow = np.array([0, 80, 80])\n",
-    "    upper_yellow = np.array([50, 255, 255])\n",
-    "    \n",
-    "    mask = cv2.inRange(frame, lower_yellow, upper_yellow)\n",
-    "    \n",
-    "    res = cv2.bitwise_and(frame, frame, mask=mask)\n",
-    "    \n",
-    "    rec.write(res)\n",
-    "    \n",
-    "vid.release()\n",
-    "rec.release()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "opencv",
    "language": "python",
-   "name": "python3"
+   "name": "opencv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -402,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
